--- a/HotTicket/Client/Pages/FetchPerformances.razor
+++ b/HotTicket/Client/Pages/FetchPerformances.razor
@@ -4,7 +4,7 @@
 @using System.Text.Json
 @inject HttpClient _http
 
-<h1>Weather performance</h1>
+<h1>Performance</h1>
 
 <p>This component demonstrates fetching performances from the server.</p>
 
